<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MasterActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" 
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_searchrequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/string_hint_searchrequest"
            android:lines="1"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/button_commitsearchrequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_button_go" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/textView_locationinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:text="@string/string_locationinfo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView_locationinfo"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/toggleButtonGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:textOn="@string/string_toggleButton_GPS_ON"
            android:textOff="@string/string_toggleButton_GPS_OFF" />

        <ToggleButton
            android:id="@+id/toggleButtonNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:textOn="@string/string_toggleButton_Network_ON"
            android:textOff="@string/string_toggleButton_Network_OFF" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView_searchresults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout2"
        android:paddingTop="10dp" >

    </ListView>

</RelativeLayout>